# ersatz

./: README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
ridicule/: __init__.py  base.py  exceptions.py  mock.py  mock_function.py  mock_object.py  patch.py  pytest_plugin.py  utils.py
tests/: test_mock.py  test_mock_function.py  test_mock_object.py  test_patch.py
