[tool.poetry]
name = "ersatz"
version = "0.1.0"
description = ""
authors = ["d1618033 <d1618033@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
