[tool.poetry]
name = "ridicule"
version = "0.0.1"
description = ""
authors = ["d1618033 <d1618033@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.3.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins]
[tool.poetry.plugins."pytest11"]
"ridicule" = "ridicule.pytest_plugin"